--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.1",
+    "axios": "^1.6.7",
     "pinia": "^2.1.7",
     "prettier": "^3.2.4",
     "vue": "^3.3.11",
